--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,18 @@
 <!Doctype html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>index</title>
+	<meta charset="utf-8">
+	<title>index</title>
+	<script src="./index.js" defer></script>
 </head>
+
 <body>
-  こんにちは
+	<h1>今買えオークション</h>
+		<div id="goods_list_zone">
+			<p>商品一覧</p>
+
+		</div>
 </body>
+
 </html>
