--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>index</title>
 	<script src="./index.js" defer></script>
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
