cssを調整 ブラウザのurlが書き換わるように変更

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>index</title>
+	<title>今買えオークション</title>
 	<script src="./index.js" defer></script>
 	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-	<h1>今買えオークション</h>
+	<h1 id = "site_title">今買えオークション</h1>
 		<div id="target_goods_zone">
 
 		</div>
